style.css
@font-face {
  font-family: "Outfit";
  src: url("assets/fonts/Outfit-VariableFont_wght.ttf");
  font-display: swap;
}

:root {
  /* colors */
  --slate-900: #1f314f;
  --slate-500: #68778d;
  --slate-300: #d5e1ef;

  /* fonts */
  --ff-outfit: "Outfit", system-ui, sans-serif;

  /* font-sizes */
  --fs-15: 0.9375rem;
  --fs-22: 1.375rem;

  /* font-weights */
  --fw-regular: 400;
  --fw-bold: 700;

  /* line-heights*/
  --lh-120: 120%;
  --lh-140: 140%;

  /* letter spacings */
  --ls-0: 0;
  --ls-02: 0.0013rem;

  /* spacing */
  --sp-0: 0rem;
  --sp-16: 1rem;
  --sp-24: 1.5rem;
  --sp-40: 2.5rem;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
}

@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
    scroll-behavior: smooth;
  }
}

body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}

img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
  height: auto;
}

input,
button,
textarea,
select {
  font: inherit;
}

p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

html {
  background-color: var(--slate-300);
  font-family: var(--ff-outfit);
}

body {
  display: grid;
  place-content: center;
  min-height: 100vh;
}

.card-wrapper {
  background-color: white;
  max-width: 320px;
  border-radius: 20px;
  padding: var(--sp-16);
  text-align: center;
  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.103);

  @media screen and (max-width: 30rem) {
    margin-inline: var(--sp-24);
  }

  & .card-img {
    width: 100%;
    border-radius: 10px;
  }

  & .card-content {
    padding: var(--sp-24) var(--sp-16);

    & h2 {
      color: var(--slate-900);
      font-size: var(--fs-22);
      font-weight: var(--fw-bold);
      line-height: var(--lh-120);
    }

    & p {
      margin-top: var(--sp-16);
      color: var(--slate-500);
      font-size: var(--fs-15);
      font-weight: var(--fw-regular);
      line-height: var(--lh-140);
      letter-spacing: var(--ls-02);
    }
  }
}

